--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "bootstrap": "^5.3.2",
+    "echarts": "^5.4.3",
     "ionicons": "^7.0.0",
+    "ngx-echarts": "^16.1.1",
+    "ngx-gauge": "^8.0.0",
+    "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
