--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": ["src/theme/variables.scss", "src/global.scss", "node_modules/@nebular/theme/styles/prebuilt/default.css"],
             "scripts": []
           },
           "configurations": {
@@ -111,7 +111,11 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss",
+              "src/global.scss",
+              "node_modules/@nebular/theme/styles/prebuilt/default.css"
+            ],
             "scripts": []
           },
           "configurations": {
