--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
+    "@angular/animations": "^16.2.11",
+    "@angular/cdk": "^16.2.11",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
@@ -21,13 +22,19 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor/android": "5.5.1",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.5.1",
+    "@capacitor/core": "^5.5.1",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "^5.5.1",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@nebular/date-fns": "^11.0.1",
+    "@nebular/moment": "^11.0.1",
+    "@nebular/theme": "^11.0.1",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "echarts": "^5.4.3",
     "ionicons": "^7.0.0",
     "ngx-echarts": "^16.1.1",
@@ -47,7 +54,8 @@
     "@angular/cli": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.5.1",
+    "@capacitor/assets": "3.0.1",
+    "@capacitor/cli": "^5.5.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
